Create link, category

--- a/src/main/resources/public/css/common.css
+++ b/src/main/resources/public/css/common.css
@@ -38,7 +38,7 @@ body > div.cover h1{
 }
 
 .cover:not(:first-child), .container:not(:first-child){
-    /*display: none;*/
+    display: none;
     background: white;
 }
 
