--- a/src/main/resources/public/css/links/links_main.css
+++ b/src/main/resources/public/css/links/links_main.css
@@ -8,7 +8,10 @@
     top: 0;
     bottom: 0;
     
+    padding: 0.25rem;
+    text-align: left;
     border-right: 5px ridge black;
+    overflow: auto;
 }
 
 #list_view_container{
